--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                   <!--  -->
                   <span
                     id="FigmaPhone"
-                    class="flex items-center justify-center gap-1 w-[90vw] h-[9.5vh] border-2 border-black hover:bg-black hover:text-white rounded-xl"
+                    class="figma-hover flex items-center justify-center gap-1 w-[90vw] h-[9.5vh] rounded-xl"
                   >
                     <i class="bx bxl-figma text-3xl text-orange-700"></i>
                     <h3 class="font-sans font-normal text-xl cursor-pointer">
@@ -339,7 +339,7 @@
           <section class="flex flex-col items-center justify-center gap-12">
             <ul
               id="valuePhone"
-              class="w-[90vw] h-[22vh] bg-[#e8e7fe] flex items-start pt-3 pl-3 justify-start gap-8 rounded-sm"
+              class="w-[90vw] h-[22vh] bg-[#f3f4f6] flex items-start pt-3 pl-3 justify-start gap-8 rounded-sm"
             >
               <img
                 class="inline h-[14vh] w-[35vw] bg-blue-800"
